unit 1 - pathway 4 - Rolling dices

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hp_text">Be Merry</string>
     <string name="signature">Nek</string>
     <string name="roll">Roll</string>
+    <string name="rolledDicePlug">Dice hasn\'t been rolled yet</string>
 </resources>
