--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,17 @@
     <string name="app_name">KotlinTutorials</string>
     <string name="hp_text">Be Merry</string>
     <string name="signature">Nek</string>
+
     <string name="roll">Roll</string>
     <string name="rolledDicePlug">Dice hasn\'t been rolled yet</string>
+
+<!--  lemonade  -->
+    <string name="lemon_select">Click to select a lemon!</string>
+    <string name="lemon_squeeze">Click to juice the lemon!</string>
+    <string name="lemon_drink">Click to drink your lemonade!</string>
+    <string name="lemon_empty_glass">Click to start again!</string>
+    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
+
+
+
 </resources>
