U3P2 - Words App with Navigation Component - refactor using fragments, navGraph, navHost, navController, safeArgs plugin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,12 @@
     <string name="action_switch_layout">Switch Layout</string>
     <string name="look_up_word">Look up word in a Browser Search</string>
     <string name="look_up_words">Show Stored Words</string>
+    <!-- With Fragments -->
+    <string name="letter_list_fragment_label">Words App</string>
+    <string name="word_list_fragment_label">Words That Start With {letter}</string>
 
 
-<!--  Desserts clciking app  -->
+    <!--  Desserts clciking app  -->
     <string name="dessert_sold">Desserts Sold</string>
     <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
     <string name="share">Share</string>
