U4P2 - Mars Photos App - starter code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,6 @@
         <item quantity="other">%d cupcakes</item>
     </plurals>
 
+<!-- Mars App -->
+    <string name="mars_app_name">Mars Photos</string>
 </resources>
