--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,8 @@
 
 <!-- Mars App -->
     <string name="mars_app_name">Mars Photos</string>
+
+<!--  SQL Basics app  -->
+    <string name="sqlbasics_app_name">SQL Basics</string>
+    <string name="instruction">The database is ready!\n\nUse the database inspector in Android Studio to run SQL commands.</string>
 </resources>
