--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,10 +97,22 @@
         <item quantity="other">%d cupcakes</item>
     </plurals>
 
-<!-- Mars App -->
+    <!-- Mars App -->
     <string name="mars_app_name">Mars Photos</string>
 
-<!--  SQL Basics app  -->
+    <!--  SQL Basics app  -->
     <string name="sqlbasics_app_name">SQL Basics</string>
     <string name="instruction">The database is ready!\n\nUse the database inspector in Android Studio to run SQL commands.</string>
+
+    <!--  SQL Basics app  -->
+    <string name="busschedule_app_name">Bus Schedule</string>
+    <!-- Shown above left column listing bus stops in full schedule fragment -->
+    <string name="bus_stop_header">Stop Name</string>
+    <!-- Shown above right column listing arrival times in full schedule fragment -->
+    <string name="arrival_time_header">Arrival Time</string>
+    <string name="title_activity_view_pager">ViewPagerActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+
+
 </resources>
