--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,14 @@
     <string name="tab_text_2">Tab 2</string>
 
 
+    <!--  Guess The Word app  -->
+    <string name="guesstheword_app_name">Guess the Word</string>
+    <string name="guesstheword_you_scored">You Scored</string>
+    <string name="title_text">guess the word!</string>
+    <string name="play_button">Play</string>
+    <string name="get_ready">Get ready to</string>
+    <string name="got_it">Got it</string>
+    <string name="end_game">End game</string>
+    <string name="word_is">The word is…</string>
+
 </resources>
