--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="word_count">%d of %d words</string>
     <string name="enter_your_word">Enter your word</string>
     <string name="congratulations">Congratulations!</string>
-    <string name="you_scored">"You scored: %d"</string>
+    <string name="you_scored">"You scored"</string>
     <string name="exit">Exit</string>
     <string name="play_again">Play Again</string>
     <string name="try_again">Try again!</string>
